<resources>
    <string name="app_name">Sweets Boutique Shop</string>

    <!--Меню-->
    <string name="menu_catalog">Каталог</string>
    <string name="menu_basket">Корзина</string>
    <string name="menu_favorites">Избранное</string>
    <string name="menu_account">Профиль</string>
    <string name="menu_compare">Сравнение</string>
    <string name="menu_about">О нас</string>

    <!--Каталог категорий товаров-->
    <string name="catalog_main">Каталог сладких подарков</string>
    <string name="catalog_OneString">Клубника в шоколаде</string>
    <string name="catalog_TwoString">Клубника и бананы в шоколаде</string>
    <string name="catalog_ThreeString">Ягодные букеты</string>
    <string name="catalog_fourString">Подарочные наборы</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Корзина-->
    <string name="basket">Корзина</string>
    <string name="more">Подробнее</string>
    <string name="compare">Сравнение</string>
    <string name="currency"> рублей.</string>
    <string name="header">Описание товара: </string>
    <string name="deliveryTime">Время доставки: </string>
    <string name="order">Сделать заказ</string>
    <string name="enter_tel">Введите свой номер телефона: </string>
    <string name="enter_name">Введите свое имя: </string>
    <string name="clearBasket">Очистить корзину </string>
    <string name="clearFavorites">Очистить Избранное </string>
    <string name="clearCompare">Очистить Сравнение </string>
    <string name="empty_basket">Вы ничего не добавили в корзину</string>
    <string name="empty_favorites">Вы ничего не добавили в избранное</string>
    <string name="empty_compare">Вы ничего не добавили в сравнение</string>
    <string name="seeProduct">Посмотреть товар</string>
    <string name="price">Цена товара: </string>
    <string name="salePrice">Цена со скидкой: </string>
    <string name="contact">Наши контакты: </string>
    <string name="phone">Телефон: для связи </string>
    <string name="email">Емайл: по вопросам </string>
    <string name="about">Здравствуйте, дорогие сладкоежки! Рада видеть вас на нашем сладком магазине.
Эта площадка задумывалась как место, где мы сможем предоставить вам вожможность выбрать оригинальный сладкий подаров себе или близким.
Это подарки с фруктами и ягодами, десерты, цветы, печенье, напитки. И тд, и тп, и пр. </string>

</resources>